hooks/intelliresponse.css
@charset "UTF-8";

.ama {
	background-color: efaa22;
/* 	background: URL("../uploadedImages/Content/Contact/tempbg2.jpg") no-repeat; */
	background-size: 100% 100%;
/* 	margin-left: auto; */
/*  margin-right: auto; */
/* 	margin-top:15px; */
/* 	margin-bottom:15px; */
	margin: auto;
    height: 100px;
    width: 100%;
/*  max-width: 600px; */
	border-radius: 7px;
/* 	border: 2px solid #d3d3d3; */
    padding: 2px;
/* 	background:#d3d3d3; */
	text-align: center;
}

.askForm {
	position: relative;
/* 	right: -60px; */
}


h3 {
	position: relative;
	right: -60px;
	margin-top:5px;
}

span.red {
	color: #9E1B34;
}
span.yellow {
	color: #efaa22;
}

